@@ -2545,7 +2545,7 @@ BOOLEAN NTAPI PhpProcessTreeNewCallback(
             {
                 getCellTooltip->Text = node->TooltipText->sr;
                 getCellTooltip->Unfolding = FALSE;
-                getCellTooltip->MaximumWidth = 550;
+                getCellTooltip->MaximumWidth = -1;
             }
             else
             {
